ui/scss/component/_file-render.scss
/* ... */
.file-render__viewer--three {
  position: relative;
  overflow: hidden;

  .three-viewer {
    height: calc(100vh - var(--header-height) - var(--spacing-m) * 2);
    max-height: var(--inline-player-max-height);
  }
}

.file-viewer__overlay {
  position: absolute;
  left: auto;
  right: auto;
  height: 100%;
  width: 100%;
  z-index: 2;
  color: var(--color-white);
  font-size: var(--font-body); /* put back font size from videojs change*/

  background-color: rgba(0, 0, 0, 0.9);
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: var(--spacing-l);

  @media (max-width: $breakpoint-small) {
    font-size: var(--font-small);
  }

  .button--uri-indicator,
  .button--link {
    color: var(--color-white);
  }
}

.file-viewer_embed-ended-title {
  max-width: 100%;
  p {
    font-size: 6vh;
    white-space: pre-wrap;
  }
}

.content__viewer--floating {
  .file-viewer__overlay-title,
  .file-viewer__overlay-secondary {
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
    max-width: 100%;
  }
}
@media (max-width: $breakpoint-small) {
  .file-viewer__overlay-title,
  .file-viewer__overlay-secondary {
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
    max-width: 100%;
  }
}

.file-viewer__overlay-title {
  text-align: center;
  font-size: var(--font-large);
  margin-bottom: var(--spacing-m);
}
.file-viewer__overlay-secondary {
  color: var(--color-text-subtitle);
  margin-bottom: var(--spacing-m);
}
.file-viewer__overlay-actions {
  .button + .button {
    margin-left: var(--spacing-m);
  }

  .button--link {
    vertical-align: middle;
  }
}

.file-viewer__overlay-logo {
  color: var(--color-white);
  font-weight: bold;

  .icon {
    height: 30px;
    stroke-width: 5px;
  }
}

.file-viewer--is-playing:not(:hover) .file-viewer__embedded-header {
  display: none;
}

.file-viewer__embedded-header {
  position: absolute;
  display: flex;
  justify-content: space-between;
  width: 100%;
  top: 0;
  opacity: 1;
  z-index: 2;
  font-size: var(--font-large);
  overflow-x: hidden;
  overflow-y: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  border-top-left-radius: var(--border-radius);
  border-top-right-radius: var(--border-radius);

  .button {
    padding: var(--spacing-s);
    color: var(--color-white);
    z-index: 2;

    .button__label {
      white-space: nowrap;
    }

    &:hover {
      color: var(--color-white);
    }
  }

  .credit-amount,
  .icon--Key {
    margin-right: var(--spacing-m);
  }

  @media (min-width: $breakpoint-small) {
    padding: 0 var(--spacing-l);
  }
}

.file-viewer__embedded-gradient {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  z-index: 2;
  background: linear-gradient(#000000, #00000000 70%);
  height: 75px;
  z-index: 1;
}

.file-viewer__embedded-title {
  max-width: 75%;
  z-index: 2;
  display: flex;
  align-items: center;
  padding-left: var(--spacing-s);
  color: white;
}

.file-viewer__embedded-info {
  display: flex;
  align-items: center;
  font-size: var(--font-small);
  margin-left: var(--spacing-m);
  white-space: nowrap;
  position: relative;
  overflow: hidden;

  & > *:not(:last-child) {
    margin-right: var(--spacing-s);
  }
}

.file-render__content {
  width: 100%;
  height: 100%;
  overflow: auto;
  max-width: 100vw;
}

//
// Custom viewers live below here
// These either have custom class names that can't be changed or have styles that need to be overridden
//

// Code-viewer
.CodeMirror {
  @extend .file-render__content;

  .cm-invalidchar {
    display: none;
  }

  .CodeMirror .CodeMirror-lines {
    // is there really a .CodeMirror inside a .CodeMirror?
    padding: var(--spacing-s) 0;
  }

  .CodeMirror-code {
    @include font-sans;
    letter-spacing: 0.1rem;
  }

  .CodeMirror-gutters {
    background-color: var(--color-gray-1);
    border-right: 1px solid var(--color-gray-4);
    padding-right: var(--spacing-m);
  }

  .CodeMirror-line {
    padding-left: var(--spacing-m);
  }

  .CodeMirror-linenumber {
    color: var(--color-gray-5);
  }
}

// ****************************************************************************
// Video
// ****************************************************************************

// DRY: we'll soon move vjs items to videojs.scss, so just duplicate these for now.
$control-bar-height: 2.5rem;
$control-bar-font-size: 0.8rem;
$control-bar-popup-font-size: 0.8rem;
$control-bar-icon-size: 0.8rem;

.video-js-parent {
  height: 100%;
  width: 100%;
}

// By default no video js play button
.vjs-big-play-button {
  display: none;
}
/* ... */

